@@ -85,6 +85,10 @@ esa manera si que se podría aumentar el límite sin perjudicar dichas operacion
 
 --- ZX Vision
 
+
+-expandir .z80 para sacar pantalla. tiene sentido? pero entonces se deberia hacer con los sna, sp, zsf, etc
+
+
 -ahora menus no tabulados ya no tienen boton minimizar. Hay alguna ventana, que no sea realmente un menu,
 y que tenga sentido boton de minimizar?
 Por ejemplo, snapshots a ram, el historial es una ventana de tipo menu y ya no se puede minimizar.
