@@ -1956,10 +1956,6 @@ void menu_setting_quickexit(MENU_ITEM_PARAMETERS)
 	quickexit.v ^=1;
 }
 
-void menu_setting_select_machine_by_name(MENU_ITEM_PARAMETERS)
-{
-	setting_machine_selection_by_name.v ^=1;
-}
 
 /*
 void menu_interface_first_aid(MENU_ITEM_PARAMETERS)
@@ -2333,12 +2329,16 @@ void menu_zxvision_settings(MENU_ITEM_PARAMETERS)
         }
 
 
+        /*
+        Esto ahora está en el mismo menu de Machine selection
+
 		menu_add_item_menu_en_es_ca(array_menu_common,MENU_OPCION_NORMAL,menu_setting_select_machine_by_name,NULL,
             "Select machine by name","Seleccionar maquina por nombre","Escollir maquina pel nom");
 		menu_add_item_menu_prefijo_format(array_menu_common,"[%c] ",(setting_machine_selection_by_name.v ? 'X' : ' ') );
 		menu_add_item_menu_tooltip(array_menu_common,"Select machine by name instead of manufacturer on menu Machine");
 		menu_add_item_menu_ayuda(array_menu_common,"Select machine by name instead of manufacturer on menu Machine");
         menu_add_item_menu_es_avanzado(array_menu_common);
+        */
 
 
 
